[gd_scene load_steps=10 format=3 uid="uid://idrdk5gydnug"]

[ext_resource type="Script" path="res://scripts/auth.gd" id="1_cmdnk"]
[ext_resource type="Texture2D" uid="uid://b8dhs7qw1k451" path="res://images/ui/background.png" id="2_dy5nf"]
[ext_resource type="FontFile" uid="uid://b2dee8vg1lqv" path="res://fonts/LilitaOne-Regular.ttf" id="2_qp1h1"]
[ext_resource type="StyleBox" uid="uid://bwsva0drgc1qm" path="res://themes/grey_box.tres" id="2_sk6mp"]
[ext_resource type="PackedScene" uid="uid://c7mvib01non2x" path="res://subscenes/buttons/scene_change_button.tscn" id="3_m64tc"]
[ext_resource type="PackedScene" uid="uid://ovea5mti5n0o" path="res://subscenes/buttons/login_button.tscn" id="5_kk60a"]
[ext_resource type="Theme" uid="uid://bb14jpmq3rnmf" path="res://themes/red_button.tres" id="5_nw772"]
[ext_resource type="Theme" uid="uid://3mshnn7sijsm" path="res://themes/blue_button.tres" id="6_y2l8d"]
[ext_resource type="Theme" uid="uid://bnma5ai17di30" path="res://themes/orange_button.tres" id="10_yf3va"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cmdnk")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -577.0
offset_top = -326.0
offset_right = 579.0
offset_bottom = 329.0
texture = ExtResource("2_dy5nf")
expand_mode = 1

[node name="Back" parent="." instance=ExtResource("3_m64tc")]
layout_mode = 1
offset_left = -536.0
offset_top = -290.0
offset_right = -280.0
offset_bottom = -220.0
text = "Back"
_theme = ExtResource("5_nw772")
next_scene_path = "res://scenes/title_screen.tscn"

[node name="Email" type="LineEdit" parent="."]
layout_mode = 0
offset_left = -280.0
offset_top = -105.0
offset_right = 280.0
offset_bottom = -32.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_qp1h1")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = ExtResource("2_sk6mp")
placeholder_text = "Email"
alignment = 1

[node name="Password" type="LineEdit" parent="."]
layout_mode = 0
offset_left = -280.0
offset_top = -24.0
offset_right = 280.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_qp1h1")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = ExtResource("2_sk6mp")
placeholder_text = "Password"
alignment = 1
secret = true

[node name="Login" parent="." instance=ExtResource("5_kk60a")]
layout_mode = 1
offset_left = 35.0
offset_top = 65.0
offset_right = 281.0
offset_bottom = 135.0
_theme = ExtResource("6_y2l8d")

[node name="SignUp" parent="." instance=ExtResource("3_m64tc")]
layout_mode = 1
offset_left = -280.0
offset_top = 65.0
offset_right = -34.0
offset_bottom = 135.0
theme_override_font_sizes/font_size = 21
text = "No Account?
Sign Up!"
_theme = ExtResource("10_yf3va")
next_scene_path = "res://scenes/register.tscn"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ErrorMessage" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = 149.0
offset_right = 280.0
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.796078, 0.0862745, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_qp1h1")
theme_override_font_sizes/font_size = 41
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="Login" to="." method="_on_login_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
